<resources>
    <string name="app_name">Walk Gonzaga</string>
    <string name="tap_to_start">Tap to Start</string>
    <string name="please">PLEASE</string>
    <string name="select">SELECT</string>
    <string name="one">ONE</string>
    <string name="start_tour">START TOUR</string>
    <string name="gallery">GALLERY</string>
    <string name="keys">KEYS</string>
    <string name="back">BACK</string>
    <string name="next">NEXT</string>
    <string name="map">MAP</string>
    <string name="title_activity_map">Map</string>
    <string name="aboutApp1"><b>Tour</b>: This is where you start your augmented reality tour of Gonzaga University.\n<b>Gallery</b>: This is where you can view other information that was not covered on the tour along with the information that was. \n<b>Keys</b>: This is where you find all of the keys that you have collected or could collect in the tour.</string>
    <string name="option_get_gallery">Full Gallery</string>
    <string name="option_get_camera">Camera</string>
    <string name="option_get_home">Home</string>
    <string name="option_get_keys">Keys</string>
    <string name="option_get_map">Map</string>


</resources>
