<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="harvey.com.walkgujava.OptionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Please"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please"
            android:textAlignment="center"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/Select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textAlignment="center"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/One"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/one"
            android:textAlignment="center"
            android:textSize="45sp" />

        <Button
            android:id="@+id/start_tour_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_tour" />

        <Button
            android:id="@+id/gallery_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gallery" />

        <Button
            android:id="@+id/keys_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keys" />
    </LinearLayout>
</GridLayout>
